--- a/inventory/host_vars/domain/vars.yml
+++ b/inventory/host_vars/domain/vars.yml
@@ -229,7 +229,7 @@ nextcloud_app_collabora_wopi_url: "{{ collabora_online_url }}"
 # https://docs.nextcloud.com/server/stable/admin_manual/configuration_server/config_sample_php_parameters.html
 # https://github.com/mother-of-all-self-hosting/ansible-role-nextcloud/blob/main/defaults/main.yml
 
-nextcloud_preview_enabled: true
+nextcloud_preview_enabled: false
 
 nextcloud_environment_variables_additional_variables: |
   PHP_MEMORY_LIMIT=1024M
@@ -239,63 +239,40 @@ nextcloud_config_parameter_default_timezone: Europe/Copenhagen
 nextcloud_config_parameter_maintenance_window_start: 3
 
 
-nextcloud_config_parameters_custom: [
-  {{
-    ([
-      {
-        'key': 'mail_smtpmode',
-        'value': '{{ vault_mail_smtp_mode }}',
-        'type': 'string'
-      },
-      {
-        'key': 'mail_sendmailmode',
-        'value': '{{ vault_mail_smtp_mode }}',
-        'type': 'string'
-      },
-      {
-        'key': 'mail_from_address',
-        'value': '{{ vault_mail_from_address }}',
-        'type': 'string'
-      },
-      {
-        'key': 'mail_domain',
-        'value': '{{ domain }}',
-        'type': 'string'
-      },
-      {
-        'key': 'mail_smtphost',
-        'value': '{{ vault_mail_smtp_host }}',
-        'type': 'string'
-      },
-      {
-        'key': 'mail_smtpport',
-        'value': '{{ vault_mail_smtp_port }}',
-        'type': 'integer'
-      },
-      {
-        'key': 'mail_smtpsecure',
-        'value': '{{ vault_mail_smtp_secure }}',
-        'type': 'string'
-      },
-      {
-        'key': 'mail_smtpauth',
-        'value': '{{ vault_mail_smtp_auth }}',
-        'type': 'integer'
-      },
-      {
-        'key': 'mail_smtpname',
-        'value': '{{ vault_mail_from_adress }}@{{ domain }}',
-        'type': 'string'
-      },
-      {
-        'key': 'mail_smtppassword',
-        'value': '{{ vault_mail_smtp_password }}',
-        'type': 'string'
-      },
-    ])
-  }}
-]
-
+nextcloud_config_parameters_custom:
+  - key: mail_smtpmode
+    value: "{{ vault_mail_smtp_mode }}"
+    type: string
+  - key: mail_sendmailmode
+    value: "{{ vault_mail_smtp_mode }}"
+    type: string
+  - key: mail_from_address
+    value: "{{ vault_mail_smtp_address }}"
+    type: string
+  - key: mail_domain
+    value: "{{ domain }}"
+    type: string
+  - key: mail_smtphost
+    value: "{{ vault_mail_smtp_host }}"
+    type: string
+  - key: mail_smtpport
+    value: "{{ vault_mail_smtp_port | int }}"
+    type: integer
+  - key: mail_smtpsecure
+    value: "{{ vault_mail_smtp_secure }}"
+    type: string
+  - key: mail_smtpauth
+    value: 1 | int
+    type: integer
+  - key: mail_smtpname
+    value: "{{ vault_mail_smtp_address }}"
+    type: string
+  - key: mail_smtppassword
+    value: "{{ vault_mail_smtp_password }}"
+    type: string
+  - key: mail_smtpauthtype
+    value: "LOGIN"
+    type: string
 
 ########################################################################
 #                                                                      #
