--- a/inventory/host_vars/domain/vars.yml
+++ b/inventory/host_vars/domain/vars.yml
@@ -238,7 +238,6 @@ nextcloud_config_parameter_default_phone_region: DK
 nextcloud_config_parameter_default_timezone: Europe/Copenhagen
 nextcloud_config_parameter_maintenance_window_start: 3
 
-
 nextcloud_config_parameters_custom:
   - key: mail_smtpmode
     value: "{{ vault_mail_smtp_mode }}"
@@ -262,10 +261,10 @@ nextcloud_config_parameters_custom:
     value: "{{ vault_mail_smtp_secure }}"
     type: string
   - key: mail_smtpauth
-    value: 1 | int
+    value: 1
     type: integer
   - key: mail_smtpname
-    value: "{{ vault_mail_smtp_address }}"
+    value: "{{ vault_mail_smtp_address }}@{{ domain }}"
     type: string
   - key: mail_smtppassword
     value: "{{ vault_mail_smtp_password }}"
