--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -157,6 +157,10 @@
     - role: galaxy/barassistant
     # /role-specific:barassistant
 
+    # role-specific:bind
+    - role: galaxy/bind
+    # /role-specific:bind
+
     # role-specific:browserless
     - role: galaxy/browserless
     # /role-specific:browserless
