Add Apache Tika Server (ansible-role-tika) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -733,6 +733,10 @@
     - role: galaxy/thelounge
     # /role-specific:thelounge
 
+    # role-specific:tika
+    - role: galaxy/tika
+    # /role-specific:tika
+
     # role-specific:tinyauth
     - role: galaxy/tinyauth
     # /role-specific:tinyauth
