Add Open Archiver (ansible-role-openarchiver) to files in templates/
Requires ansible-role-tika

Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -533,6 +533,10 @@
     - role: galaxy/onlyoffice_docs
     # /role-specific:onlyoffice_docs
 
+    # role-specific:openarchiver
+    - role: galaxy/openarchiver
+    # /role-specific:openarchiver
+
     # role-specific:opengist
     - role: galaxy/opengist
     # /role-specific:opengist
