--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -468,6 +468,10 @@
   version: v9.1.0-2
   name: onlyoffice_docs
   activation_prefix: onlyoffice_docs_
+- src: git+https://seed.radicle.garden/z2Q7Pka6bCT5D6Ng54kT8UcYAcVTC.git
+  version: v0.4.0-0
+  name: openarchiver
+  activation_prefix: openarchiver_
 - src: git+https://seed.radicle.garden/z48WEbcYK3E6uDmfP1Qbb9AGdz1L3.git
   version: v1.11.1-1
   name: opengist
