Add Apache Tika Server (#1283)
* Add Apache Tika Server (ansible-role-tika) to files in templates/

Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

* Add Apache Tika Server to supported-services.md

Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

* Add tika.md: copy memcached.md

Reuse https://app.radicle.xyz/nodes/iris.radicle.xyz/rad%3Az2SXkaceJw3YmS89T1xGysnFSjWsw/tree/7ea1a40428e3180a8040d7c2d6020ed4802708ed/docs/services/memcached.md

Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

* Update tika.md

Reuse https://app.radicle.xyz/nodes/seed.radicle.garden/rad%3Azbk3MzAN6SX6d8pa9DT2kHDscyr6/tree/922ca966b010f7efd40bd3c667a9aca605460f00/docs/configuring-tika.md

Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

---------

Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>
Co-authored-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -704,6 +704,10 @@
   version: v4.4.3-2
   name: thelounge
   activation_prefix: thelounge_
+- src: git+https://seed.radicle.garden/zbk3MzAN6SX6d8pa9DT2kHDscyr6.git
+  version: v3.2.3.0-0
+  name: tika
+  activation_prefix: tika_
 - src: git+https://github.com/devture/com.devture.ansible.role.timesync.git
   version: v1.1.0-0
   name: timesync
