Add Weblate (ansible-role-weblate) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -748,6 +748,10 @@
   version: v1.0.0-2
   name: vikunja
   activation_prefix: vikunja_
+- src: git+https://seed.radicle.garden/z3NoFEkNtQQjSGjLvweqwCFPbC59R.git
+  version: v5.14.3.0-0
+  name: weblate
+  activation_prefix: weblate_
 - src: git+https://github.com/spatterIight/ansible-role-wetty.git
   version: v2.5-0
   name: wetty
