--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,11 @@
-/inventory/hosts
-
 # Ignore folder that would expose domain
 
-!inventory/host_vars/domain/*
-inventory/host_vars/
-!inventory/host_vars/authentik.domain-deps/
-
-.gitignore.swp
-
-# ignore roles pulled by ansible-galaxy
-/roles/galaxy/*
-!/roles/galaxy/.gitkeep
-
-# ignores vscode file
-.vscode
-
-# ignores macos files
-.DS_Store
+/inventory/hosts
+/inventory/host_vars/**
+!/inventory/host_vars/domain/
+!/inventory/host_vars/domain/**
+/inventory/host_vars/domain/*.bak
+/inventory/host_vars/domain/**/*.bak
 
 /requirements.yml
 /setup.yml
@@ -27,3 +16,18 @@ inventory/host_vars/
 
 /group_vars/*
 !/group_vars/.gitkeep
+
+# ignore roles pulled by ansible-galaxy
+/roles/galaxy/*
+!/roles/galaxy/.gitkeep
+
+# Ignore temp files
+.gitignore.swp
+*.bak
+
+# ignores vscode file
+.vscode
+
+# ignores macos files
+.DS_Store
+
