--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -253,6 +253,10 @@
     - role: galaxy/excalidraw_room
     # /role-specific:excalidraw_room
 
+    # role-specific:farmos
+    - role: galaxy/farmos
+    # /role-specific:farmos
+
     # role-specific:filebrowser
     - role: galaxy/filebrowser
     # /role-specific:filebrowser
