Add An Otter Wiki (ansible-role-otterwiki) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -553,6 +553,10 @@
     - role: galaxy/openregex
     # /role-specific:openregex
 
+    # role-specific:otterwiki
+    - role: galaxy/otterwiki
+    # /role-specific:otterwiki
+
     # role-specific:outline
     - role: galaxy/outline
     # /role-specific:outline
