--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -488,6 +488,10 @@
   version: v1.3.0-0
   name: openregex
   activation_prefix: openregex_
+- src: git+https://seed.radicle.garden/zvzJe15VMBkGd2CMBctvpVZgmQG5.git
+  version: v2.14.2-0
+  name: otterwiki
+  activation_prefix: otterwiki_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-outline.git
   version: v1.0.1-0
   name: outline
