--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -453,7 +453,7 @@
   name: nextcloud
   activation_prefix: nextcloud_
 - src: git+https://github.com/spatterIight/ansible-role-nifi.git
-  version: develop # v2.6.0-0
+  version: v2.6.0-2 
   name: nifi
   activation_prefix: nifi_
 - src: git+https://seed.radicle.garden/z8vyzN3a8DmwhcUq3949SihKd1Wh.git
