--- a/inventory/host_vars/domain/vars.yml
+++ b/inventory/host_vars/domain/vars.yml
@@ -638,6 +638,22 @@ headscale_systemd_required_services_list_custom:
 
 ########################################################################
 #                                                                      #
+# headplane                                                            #
+#                                                                      #
+########################################################################
+
+headplane_enabled: true
+
+headplane_hostname: "headplane.{{ domain }}"
+
+########################################################################
+#                                                                      #
+# /headplane                                                           #
+#                                                                      #
+########################################################################
+
+########################################################################
+#                                                                      #
 # neko                                                                 #
 #                                                                      #
 ########################################################################
